2003-05-21  Noah Levitt  <nlevitt@columbia.edu>

	* glib/guniprop.c: Fix obscure typo in case conversion routine
	(#113469).

Tue May 20 14:14:55 2003  Manish Singh  <yosh@gimp.org>

	* configure.in: wrap 64-bit MIN/MAX limit constants in
	G_GINT64_CONSTANT. Fixes bug #108699.

2003-05-19  Noah Levitt  <nlevitt@columbia.edu>

	* glib/gunibreak.c: Fix cut-and-pasto: g_unichar_break_type should
	return G_UNICODE_BREAK_UNKNOWN if the character is greater than
	G_UNICODE_LAST_CHAR.

2003-05-19  Noah Levitt  <nlevitt@columbia.edu>

	* glib/glist.c: Remove unused function g_list_sort2 (bug #113203).

2003-05-19  Noah Levitt  <nlevitt@columbia.edu>

	* glib/gunidecomp.c: Fix off-by-one error in
	g_unicode_canonical_ordering (bug #113260).

2003-05-19 Arafat Medini <lumina@silverpen.de>

	* ar.po: Added ar to ALL_LINGUAS

2003-05-17  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>

	* configure.in: Added cy to ALL_LINGUAS

2003-05-05  Matthias Clasen  <maclas@gmx.de>

	* glib/gstrfuncs.c (g_ascii_dtostr): 
	(g_ascii_formatd): 
	(g_ascii_strtod): Some doc fixes.  (#111805)

2003-05-05  Christian Rose  <menthos@menthos.com>

	* configure.in: Added sr and sr@Latn to ALL_LINGUAS.

Thu Apr 24 19:12:05 2003  Owen Taylor  <otaylor@redhat.com>

	* autogen.sh (have_libtool): Accept libtool-1.5. (#111483)

2003-04-09  Matthias Clasen  <maclas@gmx.de>

	* INSTALL: 
	* INSTALL.in: Remove list of configuration flags, since these 
	are already documented in docs/reference/glib/building.sgml.

2003-04-08  Matthias Clasen  <maclas@gmx.de>

	* INSTALL: Move Cross-compliation information to reference manual.

Mon Apr  7 13:40:28 2003  Owen Taylor  <otaylor@redhat.com>

	* glib/gmain.c (g_main_loop_run): When waiting for
	the main loop to be freed up, wait on either
	!loop->is_running or got_ownership, not both.
	(Caused gtk_dialog_run() not to work in other
	threads, reported by Jean-Yves Lefort)

2003-04-07  Matthias Clasen  <maclas@gmx.de>
