@@ -1,3 +1,7 @@
+2003-05-22  Noah Levitt  <nlevitt@columbia.edu>
+
+	* glib/guniprop.c: Update g_unichar_iswide to Unicode 4.0 (#113404).
+
 2003-05-21  Noah Levitt  <nlevitt@columbia.edu>
 
 	* glib/guniprop.c: Fix obscure typo in case conversion routine
